[package]
name = "leo_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
template-torneo = { version = "0.1.0", path = "../template-torneo" }
rand = "0.8"
colored="2.0"
alessio-1 = {path ="../alessio-1"}
alessio-2 = {path ="../alessio-2"}
mattiaz_2 = {path ="../mattiaz_2"}
leo_1 = { version = "0.1.0", path = "../leo_1" }
