[package]
name = "runner-torneo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored="2.0"
template-torneo = {path ="../template-torneo"}
alessio-1 = {path ="../alessio-1"}
alessio-2 = {path ="../alessio-2"}