[package]
name = "runner-torneo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored="2.0"
template-torneo = {path ="../template-torneo"}
alessio-1 = {path ="../alessio-1"}
alessio-2 = {path ="../alessio-2"}
davide = { version = "0.1.0", path = "../davide" }
leo_2 = { version = "0.1.0", path = "../leo_2" }
mattiaz_2 = {path ="../mattiaz_2"}
zen = { version = "0.1.0", path = "../zen" }
mattiaz_1 = {path ="../mattiaz_1"}
leo_1 = { version = "0.1.0", path = "../leo_1" }
bot_1 = { version = "0.1.0", path = "../bot_1" }
bot_2 = { version = "0.1.0", path = "../bot_2" }
